--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ cc = meson.get_compiler('cpp')
 m_dep = cc.find_library('m', required : false)
 portaudio_dep = dependency('portaudio-2.0')
 sdl2_dep = dependency('sdl2')
+sdl2_image_dep = dependency('SDL2_image')
 glew_dep = dependency('glew')
 incdir = include_directories('src', 'external')
 
@@ -26,6 +27,7 @@ executable(
   dependencies: [
     portaudio_dep,
     sdl2_dep,
+    sdl2_image_dep,
     glew_dep,
     m_dep
   ],
