Lots of minor fixes and cleanups

--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ src = [
   'src/audio.cc',
   'src/bindings.cc',
   'src/cafefm.cc',
-  'src/control_context.cc',
+  'src/control_state.cc',
   'src/controller/controller.cc',
   'src/controller/keyboard.cc',
   'src/fm.cc',
