Fix memory bugs, add game controllers

--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,7 @@ src = [
   'src/control_state.cc',
   'src/controller/controller.cc',
   'src/controller/keyboard.cc',
+  'src/controller/gamecontroller.cc',
   'src/fm.cc',
   'src/helpers.cc',
   'src/instrument.cc',
