--- a/meson.build
+++ b/meson.build
@@ -14,6 +14,7 @@ src = [
   'src/controller/keyboard.cc',
   'src/controller/gamecontroller.cc',
   'src/controller/joystick.cc',
+  'src/encoder.cc',
   'src/fm.cc',
   'src/helpers.cc',
   'src/instrument.cc',
@@ -29,6 +30,7 @@ portaudio_dep = dependency('portaudio-2.0')
 sdl2_dep = dependency('sdl2')
 sdl2_image_dep = dependency('SDL2_image')
 glew_dep = dependency('glew')
+sndfile_dep = dependency('sndfile')
 boost_dep = dependency('boost', modules : ['filesystem', 'system'])
 incdir = include_directories('src', 'external')
 
@@ -48,6 +50,7 @@ executable(
     sdl2_dep,
     sdl2_image_dep,
     glew_dep,
+    sndfile_dep,
     boost_dep,
     m_dep
   ],
